--- a/resource/tasks.json
+++ b/resource/tasks.json
@@ -3238,8 +3238,8 @@
         ],
         "next": [
             "RecruitingActivitiesRecruitSkip",
-            "RecruitingActivitiesRecruitSkipWithoutButton",
-            "RecruitingActivitiesRecruitNowConfirm"
+            "RecruitingActivitiesRecruitNowConfirm",
+            "RecruitingActivitiesRecruitSkipWithoutButton"
         ]
     },
     "RecruitingActivitiesRecruitSkip": {
@@ -6878,8 +6878,8 @@
             118
         ],
         "next": [
-            "Roguelike@ChooseOper",
-            "Roguelike@RecruitCloseGuide"
+            "Roguelike@RecruitCloseGuide",
+            "Roguelike@ChooseOper"
         ]
     },
     "Roguelike@ClickToDrops": {
@@ -7236,9 +7236,9 @@
         ],
         "rearDelay": 1000,
         "next": [
-            "Roguelike@ClickToDrops",
             "Roguelike@GetDropSelectReward",
-            "Roguelike@ChooseOperFlag"
+            "Roguelike@ChooseOperFlag",
+            "Roguelike@ClickToDrops"
         ]
     },
     "Roguelike@InBattleFlag": {
