fix: 修复卡在隐私协议界面的问题

--- a/resource/tasks.json
+++ b/resource/tasks.json
@@ -1827,7 +1827,7 @@
             "GameStart",
             "StartToWakeUp",
             "StartLoginBServer",
-            "BServerPrivacyPolicy",
+            "GamePrivacyPolicy",
             "StartUpConnectingFlag",
             "",
             "CloseAnno",
@@ -1846,19 +1846,41 @@
             "StartUp@FromStageSN"
         ]
     },
-    "BServerPrivacyPolicy": {
-        "Doc": "B服有时候会在GameStart之前有个隐私协议的确认需要点击一下",
-        "action": "ClickSelf",
+    "GamePrivacyPolicy": {
+        "Doc": "有时候会在GameStart之前有个隐私政策提示需要点击 `同意`",
+        "algorithm": "OcrDetect",
+        "action": "DoNothing",
+        "cache": false,
+        "text": [
+            "隐私政策"
+        ],
         "roi": [
-            700,
-            560,
-            120,
-            100
+            400,
+            0,
+            480,
+            360
         ],
         "next": [
+            "GamePrivacyPolicyConfirm",
             "StartUpThemes#next",
-            "BServerPrivacyPolicy@Loading2",
-            "ReturnTo"
+            "GamePrivacyPolicy@Loading2"
+        ]
+    },
+    "GamePrivacyPolicyConfirm": {
+        "algorithm": "OcrDetect",
+        "action": "ClickSelf",
+        "cache": false,
+        "text": [
+            "同意"
+        ],
+        "roi": [
+            640,
+            360,
+            360,
+            360
+        ],
+        "next": [
+            "GamePrivacyPolicy#next"
         ]
     },
     "GameStart": {
